@@ -3,6 +3,9 @@
     * Require SPVM::Resource::SocketUtil 1.002.
   [Internal Changes]
     * struct sockaddr_un is not defined because spvm_socket_util.h has it now.
+  [Support Removal]
+    * SPVM::Sys does not support 32bit systems.
+    
 0.521 2024-06-05
   [Requirement Changes]
     * Require SPVM 0.990006.
